--- a/DnD/encabezado.html
+++ b/DnD/encabezado.html
@@ -7,12 +7,10 @@
 			body{
 				background-color: #161616;
 			}
-			img{
-				margin-left: 75px;
-			}
 		</style>
+		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body>
-        <img src="ImagenesYVideos/DnD-Symbol.png" alt="DnD" width="143" height="80"/> 
+        <img src="ImagenesYVideos/DnD-Symbol.png" alt="DnD" width="143" height="80" style = "margin-left: 75px;"/> 
 	</body>
 </html>
