--- a/DnD/inicio.html
+++ b/DnD/inicio.html
@@ -7,17 +7,92 @@
             body{
                 background-color: #e6cfbd;
 				margin-left: 25px;
+				margin-bottom: 50px;
             }
-			p{
-				margin-bottom: 0px;
-				line-height: 1;
-			}
 			.cita{
 				margin-left: 1200px;
 			}
 		</style>
+		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body>
         <h1>Inicio</h1>
+		<p>Hace mucho tiempo, en Estados Unidos, un grupo de amigos estaban cansados de limitarse a leer historias sobre mundo de magia, monstruos y aventura. Querían jugar en esos mundos en vez de solo observarlos. Por ello crearon <b>Dungeons & Dragons</b>, dando el pistoletazo de salida a una revolución en el mundo de los juegos.</p>
+		<p>Para jugar Dungeons & Dragons no necesitas leer todas, la reglas, memorizar cada detalle o dominar el arte de tirar dados de forma extravagante para que salgan mejores números. Solo necesitas tener un grupo de amigos con el que jugar (altualmente gracias a la tecnología a grupos por reddit, discord y otras redes para buscar a gente que quiere si no dispones de un gripo que quiera jugar) y una imaginación poderosa, o el deseo de usar una imaginación poderosa. No necesitas ser un maestro cuentacuentos ni una artista, tan solo debes estar dispuesto a construir algo y compartirlo con los demás.</p>
+		<p>Jugar Dungeons & Dragons es un ejercicio de creación colaborativa donde con tus amigos darás vida a historias épicas, llenas de tensión y momentos memorables. Crearéis bromas referentes a lo ocurrido en partida, los dados pueden ser crueles con vosotros o vuestros mejores amigos y vuestra creatividad colectiva construirá historias que contareis una y otra vez que iran desde lo absurdo (mis favoritas) hasta leyendas contadas por los mejores bardos.</p>
+		<p>Lo más probable sea que los primeros primeros personajes y aventuras sean una amalgama de clichés, pero no tiene por que ser malo, avanza, crea más personajes y aventuras, cuanto más veces practiques más dácil se te hará crear hasta que tengas tu propio mundo de fantasía repleto de lo que tu quieras.</p>
+
+		<hr>
+		
+		<h2>Introducción</h2>
+		<p>El objetivo del juego es contar historias en mundos de espadas y brujerías (aunque no hay por que limitarse). El motor de D&D es la imaginación, visualizar el imponente castillo bajo el tormentoso cielo nocturno e imaginar cómo un aventurero reacciona a los desafios de la escena.</p>
+		<p>En la partida cada jugador crea un personaje y forma parte de un equipo que, mediante trabajo conjunto, puede explorar desde ciudades en ruina hasta oscuras mazmorras. Los aventureros podrán resolver acertijos, hablar con otros personajes, luchar contra monstruos y descubrir objetos mágicos y tesoros.</p>
+		<p>Un jugador asume el papel de <i>Dungeon Master</i> (DM o <i>Señor de la Mazmorra</i>): el narrador y arbitro del juego. El DM tiene la responsabilidad de crear aventuras para los personajes y ofrecerles retos. Es recomendable que el DM sea el jugador más experimentado, aunque como todo en este juego, eres totalmente libre.</p>
+		<p>El juego no tiene un final, cuando una trama concluye le sigue otra de modo que se crea una historia continua llamada <b>campaña</b>. Muchas personas aguantan con campañas de años donde cada reto es mayor que el anterior y los personajes van adquiriendo poder.</p>
+		<p>También hay campañas de una sola sesión denominadas <b>one-shots</b>, recomendables para hechar una tarde con amigos pero sin el compromiso de tener que quedar cada semana para continuar la partida. En estos one-shots la trama empieza y termina en la misma sesión, ya sea resolviendo el misterio, dejando un final abierto o muriendo todos los personajes (triste pero cierto).</p>
+
+		<hr>
+
+		<h2>Cómo Jugar</h2>
+		<ol>
+			<li><b>El DM describe la situación</b> en la que los jugadores se encuentran y detalla los alrededores para darles la oportunidad de hacerse una composición de lugar y decidir que hacer.</li>
+			<li><b>Los jugadores describen lo que hacen</b>, incluso hablando un solo jugador por todo el grupo. Por ejemplo: "Salimos por esa puerta". En otas ocasiones cada aventurero hace su acción, buscando uno un cofre, otro averiguando como abrir una puerta y otro peleando contra un esqueleto. No tienen por que ir por turnos pero el DM debe escuchar a todos.</li>
+			<li><b>El DM describe los resultados de las acciones.</b> Esta es la mejor parte, pudiendo pasar desde abrir el cofre hasta que el jugador muera a manos del esqueleto.</li>
+		</ol>
+		<p>Esta estructura se mantiene en bucle durante toda la partida. En situaciones concretas como los combates las acciones se mantienen ordenadas y se turnan para resolver el problema plantado.</p>
+		<p>Muchos DM recurren a música, ilustraciones o efectos de sonido para crear ambiente, y recurren a diferentes tonos de voz para distinguir aventureros, monstruos y otros personajes, aunque basta con usar la imaginación para plantear una escena.</p>
+
+		<hr>
+
+		<h2>Dados</h2>
+		<p>Llego el momento que todo el mundo esperaba, tus mejores amigos o tus peores enemigos durante tus sesiones de juego. Para este juego se usan dados poliedricos de distintas caras numeradas.</p>
+		<p>Se les llama por la inicial del dado y el numero de caras, de este modo un <i>d6</i> es dado de 6 caras. Suelen usarse un <i>d4</i>, un <i>d6</i>, un <i>d8</i>, un par de <i>d10</i> (para hacer hasta 100), un <i>d12</i> y un <i>d20</i>, siendo este ultimo la joya de la corona.</p>
+		<p>Siempre que sea necesario hacer una tirada, las reglas te diran cuantos dados y de que tipo debes utilizar, además de aplicar los modificadores. Así <i>3d8 + 5</i> quiere decir que tires 3 dados de 8 caras y le añadas 5 al resultado.</p>
+
+		<hr>
+
+		<h2>D20</h2>
+		<p>¿Has herido a ese dragón o ha rebotado tu hacha?¿Se cree ese astuto comerciante tu farol?¿Puede tu personaje nadar todo el rio? En las situaciones en las que el resultado de la acción no está claro se tira un dado de 20 caras para determinar el éxito o fracaso.</p>
+		<p>Todos los personajes y monsturos tienes seis puntuaciones de característica que determinan sus capacidades. Estas son <b>Fuerza</b>, <b>Destreza</b>, <b>Constitución</b>, <b>Inteligencia</b>, <b>Sabiduría</b> y <b>Carisma</b>, oscilando las puntuaciones entre 3 y 18 en aventuros y entre 1 y 30 en los monstruos. Estas puntuaciones y los <b>modificadores de característica</b> que derivan de ellas son la base de la mayoría de tiradas de <i>d20</i>, y conforman el núcleo de las reglas del juego.</p>
+		<ol>
+			<li><b>Tira el dado y añade un modificador.</b></li>
+			<li><b>Aplica bonificadores y penalizadores debido a las circunstancias.</b></li>
+			<li><b>Compara el total con el número objetivo.</b></li>
+		</ol>
+		<p>El número objetivo de una prueba de caraterística o de una tirada de salvación se denomina <b>Clase de Dificultad</b> (CD). El numero objetivo de una tirada de atque recibe el nombre de <b>Clase de Armadura</b> (CA). El resultado tras superar o fallar la tirada del <i>d20</i> lo determina el master.</p>
+		
+		<hr>
+
+		<h2>Ventaja y Desventaja</h2>
+		<p>En ocasiones las pruebas de característica, tiradas de ataque y tiradas de salvación se ven afectadas por circunstancias especiales llamadas ventaj y desventaja. La ventaja se aplica cuando hay circunstancias positicas afectando a la tirada de <i>d20</i> y la desventaja cuando hay cirscunstancias negativas. Cuando te encuentres en tales situaciones tirarás <i>2d20</i>, quedándote con el resultado más alto cuando tienes ventaja y con el más bajo cuando tienes desventaja.</p>
+
+		<hr>
+
+		<h2>Preferencia Concreta y Redondeo</h2>
+		<p>Hay multitud de reglas entre las reglas del manual, las reglas de la comunidad y las reglas específicas de tu master, pero hay una manera muy fácil de saber que regla tiene razón cuando hay dos que se contradicen: la regla más concreta tiene preferencia.</p>
+		<p>Pongamos la siguiente situación: vas viajando por tu mundo y te encuentras con una gran muralla. Las reglas dicen que los personajes no pueden atravesar la piedra sólida pero tu personaje es un fantasma que puede atravesar todo. En este caso tu podrías pasar tan plácidamente por la muralla como si de aire se tratara.</p>
+		<p>Es un ejemplo un tanto exagerado y obvio, pero sirve para ejemplificar esta norma.</p>
+		<p>Otra norma muy sencilla es que el redondeo siempre es hacia abajo. En una situación en la que debas dividir 13 entre 2 (por ejemplo en una tirada que hayas sacado y debas dividirla), el resultado será 6, no te quedas ni con decimales ni con el 7.</p>
+
+		<hr>
+
+		<h2>Pilares de la Aventura</h2>
+		<p>Los aventureros pueden intentar hacer cualquier cosa que sus jugadores imaginen, pero es últil dividir las actividades en categorías:</p>
+		<ul>
+			<li><b>Exploración.</b> Esto implica tanto el movimiento de los aventureros por el mundo como su interacción con los objetos y situaciones de este. Es un ciclo continuo en el que los jugadores describen lo que quieren hacer y el DM les dice lo que sucede.</li>
+			<li><b>Interacción social.</b> Los aventureros se paran a entablar conversaciones con la gente del mundo, pueden ir desde interrogatorios hasta saludos amistosos, pero todo esto da vida al mundo.</li>
+			<li><b>Combate.</b> Los personajes preparan sus armas y conjuros para atacar y derrotar a sus oponente. Es la parte más fuertemente estructurada de una sesión de juego y en el combate las criaturas se turnan para que así todos tengan la oportunidad de actuar. Aún así, que estar en medio de una pelea encarnizada no te abstenga de explorar tu entorno, aún puedes preguntarle a tu adversario como le ha ido su día o ver esa cosa tan brillante que estabas examinando antes de que empezara el combate.</li>
+		</ul>
+
+		<hr>
+		<h2>Lo Asombrosamente Común de la Magia</h2>
+		<p>Pocas aventuras acaban sin que nada mágico ocurra, de hecho, afirmaría que sería una partida verdaderamente única aquella que no cuente con nada mágico. Ya sea útil o dañina, la magia aparece frecuentemente en la vida del aventurero.</p>
+		<p>Los usuarios de magia destacan por su extraordinario talento con esta. Es posible que la gente normal presencia muestras de magia con cierta frecuencia, pero suelen ser efectos menores: un monstruo, una plegaria que recibe respuesta o un mago que fuma algo de hierba de los medianos.</p>
+		<p>Pero, para los aventureros la magia es indispensable para sobrevivir. Sin la magia curativa sucumbirian rapidamente a la heridad, sin la magia de apoyo inspirador se verían superados por sus enemigos, sin el poder mágico de los magos hasta una libelula podría matarlos.</p>
+		<p>La magia tambien suele ser el arma favorita de los villanos. Muchos aventureros se ven arrastrados de taumaturgos empecinados en usar sus poderes para el mal. El lider de la secta que busca despertar a un dios durmiente bajo los mares, la bruja que secuestra jovenes para robarles el vigor, el mago loco que persigue tener un ejercito de muertos vivioentes y el dragón que busca ascender a dios de la destrucción son solo algunos ejemplos de amenazas mágicas que asolan el mundo. ¡Pero armados con sus propios poderes mágicos en forma de conjuros y objetos mágicos los personajes podrán vencer, hay que combatir el fuego con fuego!</p>
+		
+		<hr>
+
+		<p>Como siempre pasa en Dragones y Mazmorras, no te limites a leer esto y jugar, habla con tu DM sobre las normas, mira videos y tutoriales y, en dfinitiva, crea tu propia forma de jugar. El juego te permite eso y más por lo que la pregunta es: ¿que quieres hacer?</p>
 	</body>
 </html>
