--- a/DnD/razas.html
+++ b/DnD/razas.html
@@ -10,10 +10,6 @@
 				margin-bottom: 50px;
 				margin-right: 10px;
             }
-			p{
-				margin-bottom: 0px;
-				line-height: 1;
-			}
 			.cita{
 				text-align: right;
 				margin-right: 100px;
@@ -30,7 +26,9 @@
 			.redondeado{
 				border-radius: 5%;
 			}
+			
 		</style>
+		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 	<body>
         <h1>Razas</h1>
@@ -93,17 +91,46 @@
 				<!-- Elfo -->
 				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/elfo.jpg"> <img src="ImagenesYVideos/elfo.jpg" width="250" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
 					<h3>Elfos</h3>
-					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
+					<p>Los <b>elfos</b> son un pueblo que vive en el mundo pero no forman parte completamente de él. Habitan lugares de belleza etérea, en medio de bosques ancianos o torres plateadas que brillan con una luz feérica. En estos espacios la música suave flota en el ambiente y la brisa trae una dulce fragancia. Los elfos aman la naturaleza, la magia, el arte, la artesanía, la música y la poesía.</p>
+					<p>Esbeltos y elegantes, parecen bellos a ojos de la mayoría de las razas. Pueden tener el tono de piel, cabello y ojos de los humanos, aunque tambien puede tener piel color cobre e incluso azul casi blanco, su pelo puede ser verde o azul y sus ojos pueden ser estanques de oro y plata. Carecen de vello corporal o facial. Prefieren ropas elegantes de colores vivos y disfrutan una joyería sencilla pero bonita.</p>
 					<ul>
-						<li>asdasd</li>
-						<li>asfdas</li>
-						<li>sdfsdf</li>
-						<li>safsdf</li>
-						<li>fsdfsdf</li>
-						<li>asf</li>
-						<li>asfdsdaf</li>
+						<li><b>Mejora de Característica.</b> Tu Destreza aumenta en 2.</li>
+						<li><b>Edad.</b> Alcanzan la madurez igual que los humanos, aunque la concepción de mayoría de edad de los elfos incluye la experiencia vital. Suelen llegar a lo que ellos llaman edad adulta a los 100 años y pueden vivir desde los 750 años hasta eternamente (nuevamente, según a quien le preguntes).</li>
+						<li><b>Alineamiento.</b> Los elfos aman la libertad, la variedad y la expresión personal, por lo que tienden hacia el caos. Valoran y protegen la libertad, tanto la suya como la de los demás, y la mayoría suelen ser buenos.</li>
+						<li><b>Tamaño.</b> De media son más bajos que los humanos, midiendo entre 1,5 metros y 1,8 metros, aunque depende de a quien le preguntes pueden decir que son más altos. Su peso oscila en los 45 y 65 kilos. Su tamaño es Mediano.</li>
+						<li><b>Velocidad.</b> Su velocidad caminando es de 30 pies.</li>
+						<li><b>Visión en la Oscuridad.</b> Acostumbrados a las penumbras de los bosques y el cielo nocturno, pueden ver en la oscuridad. Hasta 60 pies pueden ver luz tenue como brillante y en la oscuridad como luz tenue. No pueden distinguir colores en la oscuridad.</li>
+						<li><b>Sentidos Agudos.</b> Son competentes en Percepción.</li>
+						<li><b>Linaje Feérico.</b> Tienes ventaja en tiradas de salvación contra ser hechizado y la magia no puede dormirte.</li>
+						<li><b>Trance.</b> Los elfos no necesitan dormir. Meditan en estado semiconsciente durante 4 horas al día. Mientras meditan experimentan algo parecido a sueños que son sólo ejercicios mentales. Equivale el trance a 8 horas de sueño.</li>
+						<li><b>Idiomas.</b> Pueden hablar, leer y escribir en común y élfico. El idioma elfo es fluido con entonaciones sutiles y gramática compleja. La literatura élfica es rica y variada, y sus canciones y poemas son famosos entre todas las razas. Muchos bardos suelen aprender élficos.</li>
 					</ul>
-					<p>jdfshdjf</p>
+					<p>Los elfos tienen ancestrales divisiones que dieron paso a tres subrazas:</p>
+					<h4>Alto Elfo</h4>
+					<p>Poseen una mente aguda y un dominio de los rudimientos de la magia. Son orgullosos y retraídos, pues se creen superiores a las razas no élficas.</p>
+					<ul>
+						<li><b>Mejora de Característica.</b> Tu Inteligencia aumenta en 1.</li>
+						<li><b>Entrenamiento con Armas Élficas.</b> Son competentes con espadas cortas, espadas largas, arcos cortos y arcos largos.</li>
+						<li><b>Truco.</b> Conocen un truco de tu elección elegido de la lista de conjuros de mago. La Inteligencia es su aptitud mágica para lanzarlo.</li>
+						<li><b>Idioma adicional.</b> Puedes hablar, leer y escribir un idioma adicional de tu elección.</li>
+					</ul>
+					<h4>Elfo de los Bosques</h4>
+					<p>Poseen sentidos agudos y buena intuición, tus pies se desplazan rápida y sigilosamente a través de los bosques. Su piel tiene un tono cobrizo incluso verdoso. Sus cabellos tienen tonos marrones y negros. Sus ojos son verdes, marrones o avellana.</p>
+					<ul>
+						<li><b>Mejora de Característica.</b> Tu Sabiduría aumenta en 1.</li>
+						<li><b>Entrenamiento con Armas Élficas.</b> Eres competente con espadas cortas y largas y con arcos cortos y largos.</li>
+						<li><b>Pies Veloces.</b> Su velocidad cominando es de 35 pies.</li>
+						<li><b>Máscara de la Naturaleza.</b> Puedes intentar esconderte en cualquier lado con follaje, lluvia fuerte, nive que cae, niebla o cualquier otro fenómeno natural.</li>
+					</ul>
+					<h4>Drow</h4>
+					<p>Descencientes de los elfos antiguos, fueron expuldados del mundo de la superficie por seguir a un dios del mal. Poseen tonos de piel de color carbón y obsidiana en contraste con cabellos blancos. Tienen ojos claros de tonos lilas, plateados, rojos o azules. Son más pequeños y delgados que el resto.</p>
+					<ul>
+						<li><b>Mejora de Característica.</b> Tu Carisma aumenta en 1.</li>
+						<li><b>Visión en la Oscuridad Superior.</b> Tu Visión en la Oscuridad aumenta a 120 pies.</li>
+						<li><b>Sensibilidad a la Luz Solar.</b> Tienes desventaja en las tiradas de ataque y las pruebas de Percepción que dependan de la vista cuando se esta bajo la luz solar.</li>
+						<li><b>Magia Drow.</b> Conoces el truco <i>luces danzantes</i>. A nivel 3 aprendes <i>fuego feérico</i> y recuperas la capacidad de usarlo después de un descanso largo. A nivel 5 aprendes a lanzar <i>oscuridad</i> y lo recuperas tras un descanso largo. El Carisma es tu aptitud mágica para lanzar hechizos.</li>
+						<li><b>Entrenamiento con Armas Drow.</b> Eres competente con estoques, espadas cortas y ballestas de mano.</li>
+					</ul>
 				</td>
 			</tr>
 
@@ -142,25 +169,9 @@
 			</tr>
 
 			<tr> 
-				<!-- Dracónido -->
-				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
-					<h3>Dracónidos</h3>
-					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
-					<ul>
-						<li>asdasd</li>
-						<li>asfdas</li>
-						<li>sdfsdf</li>
-						<li>safsdf</li>
-						<li>fsdfsdf</li>
-						<li>asf</li>
-						<li>asfdsdaf</li>
-					</ul>
-					<p>jdfshdjf</p>
-				</td>
-
 				<!-- Tiefling -->
 				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
-					<h3>Tieflings</h3>
+					<h3>Tiefling</h3>
 					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
 					<ul>
 						<li>asdasd</li>
