--- a/DnD/indice.html
+++ b/DnD/indice.html
@@ -44,6 +44,7 @@
             <li class = "lis"><a href = "equipamiento.html" target = "cuerpo">Equipamiento</a></li>
             <li class = "lis"><a href = "npc.html" target = "cuerpo">NPC</a></li>
             <li class = "lis"><a href = "enemigos.html" target = "cuerpo">Enemigos</a></li>
+			<li class = "lis"><a href = "enemigos.html" target = "cuerpo">Crea tu Personaje</a></li>
             <li class = "lis"><a href = "enlaces.html" target = "cuerpo">Enlaces y Videos</a></li>
 
         </ul>
