--- a/DnD/inicio.html
+++ b/DnD/inicio.html
@@ -93,6 +93,6 @@
 		
 		<hr>
 
-		<p>Como siempre pasa en Dragones y Mazmorras, no te limites a leer esto y jugar, habla con tu DM sobre las normas, mira videos y tutoriales y, en dfinitiva, crea tu propia forma de jugar. El juego te permite eso y más por lo que la pregunta es: ¿que quieres hacer?</p>
+		<p>Como siempre pasa en Dragones y Mazmorras, no te limites a leer esto y jugar, habla con tu DM sobre las normas, mira videos y tutoriales y, en definitiva, crea tu propia forma de jugar. El juego te permite eso y más por lo que la pregunta es: ¿que quieres hacer?</p>
 	</body>
 </html>
