--- a/DnD/inicio.html
+++ b/DnD/inicio.html
@@ -12,6 +12,9 @@
 			.cita{
 				margin-left: 1200px;
 			}
+			.redondeado{
+				border-radius: 5%;
+			}
 		</style>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
@@ -43,23 +46,40 @@
 		<p>Muchos DM recurren a música, ilustraciones o efectos de sonido para crear ambiente, y recurren a diferentes tonos de voz para distinguir aventureros, monstruos y otros personajes, aunque basta con usar la imaginación para plantear una escena.</p>
 
 		<hr>
+		
+		<div>
+			<div style="float: left; margin-right: 10px;">
+				<p style="text-align: center;"><a href="ImagenesYVideos/dados.jpg"> <img src="ImagenesYVideos/dados.jpg" width="100" height="100" alt="DnD Symbol" class="redondeado"> </a></p>
+			</div>
 
-		<h2>Dados</h2>
-		<p>Llego el momento que todo el mundo esperaba, tus mejores amigos o tus peores enemigos durante tus sesiones de juego. Para este juego se usan dados poliedricos de distintas caras numeradas.</p>
-		<p>Se les llama por la inicial del dado y el numero de caras, de este modo un <i>d6</i> es dado de 6 caras. Suelen usarse un <i>d4</i>, un <i>d6</i>, un <i>d8</i>, un par de <i>d10</i> (para hacer hasta 100), un <i>d12</i> y un <i>d20</i>, siendo este ultimo la joya de la corona.</p>
-		<p>Siempre que sea necesario hacer una tirada, las reglas te diran cuantos dados y de que tipo debes utilizar, además de aplicar los modificadores. Así <i>3d8 + 5</i> quiere decir que tires 3 dados de 8 caras y le añadas 5 al resultado.</p>
+			<div>
+			<h2>Dados</h2>
+			<p>Llego el momento que todo el mundo esperaba, tus mejores amigos o tus peores enemigos durante tus sesiones de juego. Para este juego se usan dados poliedricos de distintas caras numeradas.</p>
+			<p>Se les llama por la inicial del dado y el numero de caras, de este modo un <i>d6</i> es dado de 6 caras. Suelen usarse un <i>d4</i>, un <i>d6</i>, un <i>d8</i>, un par de <i>d10</i> (para hacer hasta 100), un <i>d12</i> y un <i>d20</i>, siendo este ultimo la joya de la corona.</p>
+			<p>Siempre que sea necesario hacer una tirada, las reglas te diran cuantos dados y de que tipo debes utilizar, además de aplicar los modificadores. Así <i>3d8 + 5</i> quiere decir que tires 3 dados de 8 caras y le añadas 5 al resultado.</p>
+			</div>
+		</div>
 
 		<hr>
 
-		<h2>D20</h2>
-		<p>¿Has herido a ese dragón o ha rebotado tu hacha?¿Se cree ese astuto comerciante tu farol?¿Puede tu personaje nadar todo el rio? En las situaciones en las que el resultado de la acción no está claro se tira un dado de 20 caras para determinar el éxito o fracaso.</p>
-		<p>Todos los personajes y monsturos tienes seis puntuaciones de característica que determinan sus capacidades. Estas son <b>Fuerza</b>, <b>Destreza</b>, <b>Constitución</b>, <b>Inteligencia</b>, <b>Sabiduría</b> y <b>Carisma</b>, oscilando las puntuaciones entre 3 y 18 en aventuros y entre 1 y 30 en los monstruos. Estas puntuaciones y los <b>modificadores de característica</b> que derivan de ellas son la base de la mayoría de tiradas de <i>d20</i>, y conforman el núcleo de las reglas del juego.</p>
-		<ol>
-			<li><b>Tira el dado y añade un modificador.</b></li>
-			<li><b>Aplica bonificadores y penalizadores debido a las circunstancias.</b></li>
-			<li><b>Compara el total con el número objetivo.</b></li>
-		</ol>
-		<p>El número objetivo de una prueba de caraterística o de una tirada de salvación se denomina <b>Clase de Dificultad</b> (CD). El numero objetivo de una tirada de atque recibe el nombre de <b>Clase de Armadura</b> (CA). El resultado tras superar o fallar la tirada del <i>d20</i> lo determina el master.</p>
+		<div>
+			<div style="float: right; margin-left: 10px; margin-right: 10px;">
+				<p style="text-align: center;"><a href="ImagenesYVideos/d20.jpg"> <img src="ImagenesYVideos/d20.jpg" width="200" height="200" alt="DnD Symbol" class="redondeado"> </a></p>
+			</div>
+
+			<div >
+				<h2>D20</h2>
+				<p>¿Has herido a ese dragón o ha rebotado tu hacha?¿Se cree ese astuto comerciante tu farol?¿Puede tu personaje nadar todo el rio? En las situaciones en las que el resultado de la acción no está claro se tira un dado de 20 caras para determinar el éxito o fracaso.</p>
+				<p>Todos los personajes y monsturos tienes seis puntuaciones de característica que determinan sus capacidades. Estas son <b>Fuerza</b>, <b>Destreza</b>, <b>Constitución</b>, <b>Inteligencia</b>, <b>Sabiduría</b> y <b>Carisma</b>, oscilando las puntuaciones entre 3 y 18 en aventuros y entre 1 y 30 en los monstruos. Estas puntuaciones y los <b>modificadores de característica</b> que derivan de ellas son la base de la mayoría de tiradas de <i>d20</i>, y conforman el núcleo de las reglas del juego.</p>
+				<ol>
+					<li><b>Tira el dado y añade un modificador.</b></li>
+					<li><b>Aplica bonificadores y penalizadores debido a las circunstancias.</b></li>
+					<li><b>Compara el total con el número objetivo.</b></li>
+				</ol>
+				<p>El número objetivo de una prueba de caraterística o de una tirada de salvación se denomina <b>Clase de Dificultad</b> (CD). El numero objetivo de una tirada de atque recibe el nombre de <b>Clase de Armadura</b> (CA). El resultado tras superar o fallar la tirada del <i>d20</i> lo determina el master.</p>
+		
+			</div>
+		</div>
 		
 		<hr>
 
