--- a/DnD/npc.html
+++ b/DnD/npc.html
@@ -44,93 +44,42 @@
 
         <table class = "t1" align = "center">
 			<tr> 
-				<!-- Mediano -->
 				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/hobbit.jpg"> <img src="ImagenesYVideos/hobbit.jpg" width="275" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
 					<h3>NPC con sombrerito gracioso</h3>
 					<p>Tenía dudas de si empezara con este por que es mi favorito, este NPC no tiene ninguna peculiaridad más que tener un sombrerito que sea gracioso. Ya se que parece una idea tonta pero es porque no lo has visualizado bien: entras en una taberna y un tabernero con chistera te da una buena jarra de cerveza, sales al mercado y un tendero exactamente igual que el tabernero solo que con una gorra te vende una manzana, por último vas a luchar contra el terrible señor que oprime a este pueblo ¡y resulta ser la misma persona pero con un bombin y un bigote!</p>
                     <p>La gracia reside en utilizar a este personaje de forma recurrente cambiando toda su personalidad gracias a una única prenda de vestir. Si lo sabes utilizar este personaje tiene el potencial de sacar carcajadas en todo el grupo.</p>
 				</td>
 
-				<!-- Humano -->
 				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
-					<h3>Humanos</h3>
-					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
-					<ul>
-						<li>asd</li>
-						<li>asfdas</li>
-						<li>sdfsdf</li>
-						<li>safsdf</li>
-						<li>fsdfsdf</li>
-						<li>asf</li>
-						<li>asfdsdaf</li>
-					</ul>
-					<p>jdfshdjf</p>
+					<h3>Mercader</h3>
+					<p>Los aventureros acaban de salir de la mazmorra del malvado mago que amenazaba la existencia de la región. Han conseguido gloria eterna y respeto del pueblo y algo mucho pero que mucho más importante: un tesoro.</p>
+					<p>¿De que sirve ser inmensamente rico si no puedes gastar ese dinero en nada? El mercader es aquel NPC que te vende preciadas mejoras de equipo, eso si, a un precio razonable. Este personaje no tiene ningún aspecto predefinido: prefieres un ávaro señor de los negocios o un adorable viejito que parte de su dinero lo da a la beneficiencia, es elección tuya.</p>
+					<p>Es importante tener este NPC bien definido para que cumpla su función. Antes de crearlo deberás hacerte las siguientes preguntas: ¿Que vende?, no es lo mismo tener a un librero que un herrero, debes definir que venderá; ¿Que compra?, además de vendedor también puede ser comprador, pero un peletero probablemente no estará interesado en un hacha de mano; ¿Cuanto dinero tiene?, en especial a los pícaros les importa esto, además, no puede comprarte algo por 10 monedas si solo tiene 5.</p>
 				</td>
 
-                <!-- Humano -->
 				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
-					<h3>Humanos</h3>
-					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
-					<ul>
-						<li>asd</li>
-						<li>asfdas</li>
-						<li>sdfsdf</li>
-						<li>safsdf</li>
-						<li>fsdfsdf</li>
-						<li>asf</li>
-						<li>asfdsdaf</li>
-					</ul>
-					<p>jdfshdjf</p>
+					<h3>Viejo de Pueblo</h3>
+					<p>Personaje que solo existe para atormentar y corromper los corazones de los más nobles. Su objetivo es poner a prueba la paciencia de los jugadores mandandoles tareas de lo más tediosas, haciendo insultos pasivo agresivos y, en general, fastidiando lo más posible a los jugadores.</p>
+					<p>Un ejemplo de su uso en partida es el siguiente: Los personajes llegan agotados a un pueblo tras la pelea contra el dragon, sólo una casa parece tener actividad por lo que los aventureros van hacia allí, aunque no saben los terrores que le asolan. Tras 5 minutos esperando una mujer que afirmaba que estaba a punto de llegar abre la puerta para descubrir que no habia tanto camino material hasta la puerta. La mujer, en vez de daros hospedaje os manda a rescatar a su gato que se ha escapado y, tras una busqueda de una semana, la mujer revela que no tenia gato. El tormento no acaba aquí, la mujer empieza a hacer comentarios no muy agradable sobre vuestro equipo y a vuestros personajes no les queda mas paciencia. Hay sólo dos opciones: huir o matarla.</p>
+					<p>Usado bien puede ser una fuente de risas y frustación para todos los jugadores.</p>
 				</td>
             </tr>
 			<tr> 
-				<!-- Mediano -->
 				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/hobbit.jpg"> <img src="ImagenesYVideos/hobbit.jpg" width="275" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
-					<h3>Medianos</h3>
-					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
-					<ul>
-						<li>asdasd</li>
-						<li>asfdas</li>
-						<li>sdfsdf</li>
-						<li>safsdf</li>
-						<li>fsdfsdf</li>
-						<li>asf</li>
-						<li>asfdsdaf</li>
-					</ul>
-					<p>jdfshdjf</p>
+					<h3>Animal Hablante</h3>
+					<p>Es solamente una skin para cualquier personaje que tu quieras. Siempre añade variedad a tu mundo el que una rana humanoide de dos metros con un parche en el ojo te venda una espada en vez de un aburrido comerciante.</p>
+					<p>No hace falta humanizar a los animales, el lobo del que se llevan burlando durante 15 minutos los jugadores podría sorprenderlos dedicandole una vuelta de sus burlas.</p>
+					<p>Pueden haber llegado de cualquier manera a la situación de convertirse en animal: que su raza sea así, una bruja les ha enbrujado, sus padres hicieron un pacto con el diablo para que fuera parte cabra, cualquier excusa es buena para añadir variedad.</p>
 				</td>
 
-				<!-- Humano -->
 				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
-					<h3>Humanos</h3>
-					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
-					<ul>
-						<li>asd</li>
-						<li>asfdas</li>
-						<li>sdfsdf</li>
-						<li>safsdf</li>
-						<li>fsdfsdf</li>
-						<li>asf</li>
-						<li>asfdsdaf</li>
-					</ul>
-					<p>jdfshdjf</p>
+					<h3>Mudo</h3>
+					<p>Un NPC mudo puede ser gracioso según la situación. Te voy a poner una situación que me paso a mi:</p>
+					<p>Los personajes llegaron a un pueblo (como no) y el único que sabia la ubicación del tesoro que estaban buscando era mudo. No se podían comunicar con el porque no sabían lenguaje de signos y el hombre no sabia leer ni escibir. Un obstaculo tan absurdo los tuvo entretenidos durante toda la partida para intentar comunicarse con el: intentaron hacer dibujos, traer mapas, utilizar objetos pero nada parecía dar resultado.</p>
+					<p>Al final el bárbaro se cargó con el mudo a la espalda y cargaron con el hasta el tesoro. Desgraciadamente tambien cargaron con el a la batalla y el bárbaro que lo tenía sujeto lo confundió con su escudo, provocando que le atravesaran un par de flechas y el tesoro quede resguardado hasta que un nigromante con habilidades de escuchar a los que no hablan encuentre su tumba (2 metros bajo el suelo de una playa desierta).</p>
 				</td>
 
-                <!-- Humano -->
-				<td class = "tabla"><p style="text-align: center;"><a href="ImagenesYVideos/DnD-Symbol.png"> <img src="ImagenesYVideos/DnD-Symbol.png" width="300" height="400" alt="DnD Symbol" class="redondeado"> </a></p>
-					<h3>Humanos</h3>
-					<p>"Tu elección de raza afectará a muchos aspectos de tu personaje. Establece las aptitudes fundamenta les que perdurarán a lo largo de toda la carrera como aventurero de tu personaje. Cuando tomes esta decisión, ten en cuenta el tipo de aventurero con el que quieres jugar. Un mediano, por ejemplo, será una buena elección para un furtivo pícaro, mientras que un enano podrá convertirse fácilmente en un resistente guerrero y un elfo en un maestro de la magia arcana."</p>
-					<ul>
-						<li>asd</li>
-						<li>asfdas</li>
-						<li>sdfsdf</li>
-						<li>safsdf</li>
-						<li>fsdfsdf</li>
-						<li>asf</li>
-						<li>asfdsdaf</li>
-					</ul>
-					<p>jdfshdjf</p>
-				</td>
+              
 			</tr>
 
 		</table>
